<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_add"
    android:background="@drawable/bgsignup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_new_customer_information"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/newn"
        android:inputType="text"
        android:hint="@string/user_text"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/newm"
        android:hint="@string/userm_text"
        android:layout_below="@+id/newn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/newe"
        android:hint="@string/usere_text"
        android:layout_below="@+id/newm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/newp"
        android:inputType="text"
        android:hint="Address1 (10 AM to 5PM)"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp" />
    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/newt"
        android:inputType="text"
        android:hint="Address2 (6 PM to 9 AM)"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="220dp" />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:id="@+id/button3"
        android:onClick="addContact"
        android:layout_marginTop="77dp"
        android:layout_below="@+id/newt"
        android:layout_alignRight="@+id/newe"
        android:layout_alignEnd="@+id/newe"
        android:background="@android:drawable/radiobutton_off_background" />


</RelativeLayout>
