<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nalini.Smart_Service_Shipment.SearchContactActivity"
    tools:showIn="@layout/search_contact_layout"
    android:background="@drawable/b10">



    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="enter a name"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ser_text"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentRight="true"
        android:onClick="searchContact"
        android:layout_alignParentEnd="true"
        android:textStyle="bold|italic"
        android:clickable="false"
        android:background="#fc0f0f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Address Here"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mb_text"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:textStyle="bold" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dei_text"
        android:id="@+id/button8"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textStyle="bold|italic"
        android:background="#3af215"
        android:onClick="deleteContact"/>


</RelativeLayout>
